@@ -68,9 +68,6 @@ nobase_dist_doc_DATA += examples/kea6/softwire46.json
 nobase_dist_doc_DATA += examples/kea6/stateless.json
 nobase_dist_doc_DATA += examples/kea6/tee-times.json
 nobase_dist_doc_DATA += examples/kea6/with-ddns.json
-nobase_dist_doc_DATA += examples/netconf/kea-dhcp6-operations/BAD-config.xml
-nobase_dist_doc_DATA += examples/netconf/kea-dhcp6-operations/BAD-schema.xml
-nobase_dist_doc_DATA += examples/netconf/kea-dhcp6-operations/BAD-translator.xml
 nobase_dist_doc_DATA += examples/netconf/kea-dhcp6-operations/boot.json
 nobase_dist_doc_DATA += examples/netconf/kea-dhcp6-operations/logging.xml
 nobase_dist_doc_DATA += examples/netconf/kea-dhcp6-operations/netconf.json
