@@ -1,20 +1,25 @@
 SUBDIRS = .
 
 yangmodulesdir = ${datarootdir}/${PACKAGE_NAME}/yang/modules
-yangmodules_DATA  = ietf-dhcpv6-client@2018-09-04.yang
-yangmodules_DATA += ietf-interfaces@2014-05-08.yang
-yangmodules_DATA += ietf-dhcpv6-options@2018-09-04.yang
-yangmodules_DATA += ietf-dhcpv6-relay@2018-09-04.yang
-yangmodules_DATA += ietf-dhcpv6-server@2018-09-04.yang
-yangmodules_DATA += ietf-dhcpv6-types@2018-09-04.yang
-yangmodules_DATA += ietf-inet-types@2013-07-15.yang
-yangmodules_DATA += ietf-yang-types@2013-07-15.yang
-yangmodules_DATA += kea-ctrl-agent@2018-11-20.yang
-yangmodules_DATA += kea-dhcp-ddns@2018-11-20.yang
-yangmodules_DATA += kea-dhcp-types@2018-11-20.yang
-yangmodules_DATA += kea-dhcp4-server@2018-11-20.yang
-yangmodules_DATA += kea-dhcp6-server@2018-11-20.yang
-yangmodules_DATA += kea-logging@2018-11-20.yang
-yangmodules_DATA += kea-types@2018-11-20.yang
 
-EXTRA_DIST = ${yangmodules_DATA}
+yangmodules_list = ietf-dhcpv6-client@2018-09-04.yang
+yangmodules_list += ietf-interfaces@2014-05-08.yang
+yangmodules_list += ietf-dhcpv6-options@2018-09-04.yang
+yangmodules_list += ietf-dhcpv6-relay@2018-09-04.yang
+yangmodules_list += ietf-dhcpv6-server@2018-09-04.yang
+yangmodules_list += ietf-dhcpv6-types@2018-09-04.yang
+yangmodules_list += ietf-inet-types@2013-07-15.yang
+yangmodules_list += ietf-yang-types@2013-07-15.yang
+yangmodules_list += kea-ctrl-agent@2018-11-20.yang
+yangmodules_list += kea-dhcp-ddns@2018-11-20.yang
+yangmodules_list += kea-dhcp-types@2018-11-20.yang
+yangmodules_list += kea-dhcp4-server@2018-11-20.yang
+yangmodules_list += kea-dhcp6-server@2018-11-20.yang
+yangmodules_list += kea-logging@2018-11-20.yang
+yangmodules_list += kea-types@2018-11-20.yang
+
+if HAVE_SYSREPO
+yangmodules_DATA  = ${yangmodules_list}
+endif
+
+EXTRA_DIST = ${yangmodules_list}
